--- a/index.html
+++ b/index.html
@@ -1,26 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>我的视频播放器</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            background: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            padding: 20px;
-            margin: 0;
-        }
-        video {
-            width: 90%;
-            max-width: 1000px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.2);
-        }
-    </style>
+    <title>https://wsha.oss-rg-china-mainland.aliyuncs.com/mmms.mp4</title>
 </head>
 <body>
-    <!-- https://wsha.oss-rg-china-mainland.aliyuncs.com/mmms.mp4-->
-    <video controls src="https://my-video-bucket.oss-cn-beijing.aliyuncs.com/video.mp4"></video>
+    <!-- 粘贴你的视频直链地址 -->
+    <video controls width="100%" src="https://wsha.oss-rg-china-mainland.aliyuncs.com/mmms.mp4"></video>
 </body>
 </html>
