--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
     <!-- 粘贴你的视频直链地址 -->
     <video controls width="100%" src="https://wsha.oss-rg-china-mainland.aliyuncs.com/mmms.mp4"></video>
 </body>
-</html>
+</html><meta name="viewport" content="width=device-width, initial-scale=1.0">
